--- a/src/components/category-item/category-item.style.scss
+++ b/src/components/category-item/category-item.style.scss
@@ -1,3 +1,10 @@
+.categories-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .category-container {
   min-width: 30%;
   height: 240px;
@@ -63,21 +70,6 @@
     p {
       font-weight: lighter;
       font-size: 16px;
-    }
-  }
-}
-
-categories-container {
-  background-color: red;
-  padding: 30px;
-
-  .category-container {
-    background-color: green;
-    padding: 20px;
-
-    .category-body-container {
-      background-color: blue;
-      padding: 30px;
     }
   }
 }
